; ModuleID = '/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkj4a/j4a/class/android/media/extr_AudioTrack.c_J4AC_android_media_AudioTrack__AudioTrack__asGlobalRef__catchAll.c'
source_filename = "/home/carl/AnghaBench/ijkplayer/ijkmedia/ijkj4a/j4a/class/android/media/extr_AudioTrack.c_J4AC_android_media_AudioTrack__AudioTrack__asGlobalRef__catchAll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @J4AC_android_media_AudioTrack__AudioTrack__asGlobalRef__catchAll(i32* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i32*, align 8
  store i32* %0, i32** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  store i32* null, i32** %15, align 8
  %17 = load i32*, i32** %8, align 8
  %18 = load i32, i32* %9, align 4
  %19 = load i32, i32* %10, align 4
  %20 = load i32, i32* %11, align 4
  %21 = load i32, i32* %12, align 4
  %22 = load i32, i32* %13, align 4
  %23 = load i32, i32* %14, align 4
  %24 = call i32* @J4AC_android_media_AudioTrack__AudioTrack__catchAll(i32* %17, i32 %18, i32 %19, i32 %20, i32 %21, i32 %22, i32 %23)
  store i32* %24, i32** %16, align 8
  %25 = load i32*, i32** %8, align 8
  %26 = call i64 @J4A_ExceptionCheck__catchAll(i32* %25)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %31, label %28

28:                                               ; preds = %7
  %29 = load i32*, i32** %16, align 8
  %30 = icmp ne i32* %29, null
  br i1 %30, label %32, label %31

31:                                               ; preds = %28, %7
  store i32* null, i32** %15, align 8
  br label %40

32:                                               ; preds = %28
  %33 = load i32*, i32** %8, align 8
  %34 = load i32*, i32** %16, align 8
  %35 = call i32* @J4A_NewGlobalRef__catchAll(i32* %33, i32* %34)
  store i32* %35, i32** %15, align 8
  %36 = load i32*, i32** %15, align 8
  %37 = icmp ne i32* %36, null
  br i1 %37, label %39, label %38

38:                                               ; preds = %32
  store i32* null, i32** %15, align 8
  br label %40

39:                                               ; preds = %32
  br label %40

40:                                               ; preds = %39, %38, %31
  %41 = load i32*, i32** %8, align 8
  %42 = call i32 @J4A_DeleteLocalRef__p(i32* %41, i32** %16)
  %43 = load i32*, i32** %15, align 8
  ret i32* %43
}

declare dso_local i32* @J4AC_android_media_AudioTrack__AudioTrack__catchAll(i32*, i32, i32, i32, i32, i32, i32) #1

declare dso_local i64 @J4A_ExceptionCheck__catchAll(i32*) #1

declare dso_local i32* @J4A_NewGlobalRef__catchAll(i32*, i32*) #1

declare dso_local i32 @J4A_DeleteLocalRef__p(i32*, i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
